# whispy

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/audio/: devices.py  recorder.py
app/core/: config.py  events.py  state.py
app/integrations/: cleanup.py  clipboard.py  export.py  logging.py
app/storage/: db.py  history.py  settings.py
app/transcribe/: engine.py  local_whisper.py  models.py  openai_backend.py
app/tui/: app.py  widgets.py
docs/components/: 01-tui-shell.md  02-audio-capture.md  03-transcription-engine.md  04-history-and-storage.md  05-clipboard-and-export.md  06-settings-hotkeys-and-packaging.md
