[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whispy"
version = "0.1.0"
description = "Local-first terminal dictation app"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
whispy = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
